- test upravy otevirani detailu (auction only)

--- a/app/shared/directives/DetailAuction/detailAuctionDirective.html
+++ b/app/shared/directives/DetailAuction/detailAuctionDirective.html
@@ -1,4 +1,4 @@
-<div ng-click="toggleDetail()" class="global-list-item col-xs-12 col-sm-12 col-md-12 col-lg-12">
+<div ng-click="toggleDetail()" id="" class="global-list-item col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <div class="auction-info col-xs-12 col-sm-11 col-md-11 col-lg-11" ng-class="(expired) ? 'auction-expired' : 'nonexpired'">
         <div class="auction-label col-xs-6">{{'texts.auction.from' | i18next}}</div>
         <div class="auction-cell col-xs-6 col-sm-2 col-md-2 col-lg-2"><span>{{getCity(item.address_from)}}</span></div>
@@ -13,7 +13,7 @@
             <span ng-show="!expired && !win && userIsBidder" ng-class="{'highlight' : priceUpdated}" class="glyphicon glyphicon-thumbs-down bidder-state red"></span>
         </div>
         <div class="auction-label col-xs-6">{{'texts.auction.end_auction' | i18next}}</div>
-        <div class="auction-cell col-xs-6 col-sm-2 col-md-2 col-lauction-detailg-2 end-date"><span>{{item.end_auction}}</span></div>
+        <div class="auction-cell col-xs-6 col-sm-2 col-md-2 col-lg-2 end-date"><span>{{item.end_auction}}</span></div>
     </div>
     <div class="auction-button-detail col-xs-12 col-sm-1 col-md-1 col-lg-1">
         <span ng-show="withFavourite" ng-class="(isFavourite) ? 'is-favourite' : 'non-favourite'">
