--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 		<script src="/app/components/Auction/FavouriteAuction/favouriteAuctionController.js"></script>
 		<script src="/app/components/Auction/WinAuction/winAuctionController.js"></script>
 		<script src="/app/components/Auction/BidsAuction/bidsAuctionController.js"></script>
+		<script src="/app/components/Auction/Detail/detailAuctionController.js"></script>
 		<script src="/app/components/Shipments/new/newShipmentsController.js"></script>
 		<script src="/app/components/Shipments/finished/finishedShipmentsController.js"></script>
 		<script src="/app/components/Company/companyController.js"></script>
