--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
 		<!-- Controllers -->
 		<script src="/app/shared/mainController.js"></script>
+		<script src="/app/components/Account/Activate/activateController.js"></script>
 		<script src="/app/components/Account/Login/loginController.js"></script>
 		<script src="/app/components/Account/Registration/registrationController.js"></script>
 		<script src="/app/components/Account/Profile/userProfileController.js"></script>
