--- a/app/shared/directives/DetailAuction/detailAuctionDirective.html
+++ b/app/shared/directives/DetailAuction/detailAuctionDirective.html
@@ -1,4 +1,4 @@
-<div ng-click="toggleDetail()" id="" class="global-list-item col-xs-12 col-sm-12 col-md-12 col-lg-12">
+<div ng-click="toggleDetail($event)" id="" class="global-list-item col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <div class="auction-info col-xs-12 col-sm-11 col-md-11 col-lg-11" ng-class="(expired) ? 'auction-expired' : 'nonexpired'">
         <div class="auction-label col-xs-6">{{'texts.auction.from' | i18next}}</div>
         <div class="auction-cell col-xs-6 col-sm-2 col-md-2 col-lg-2"><span>{{getCity(item.address_from)}}</span></div>
@@ -25,7 +25,7 @@
     <div class="arrow"></div>
     <h2 class="main-header">
         {{'texts.auction.detail' | i18next}} - {{item.ID}}
-        <i ng-click="toggleDetail()" class="red cross glyphicon glyphicon-remove"></i>
+        <i ng-click="toggleDetail($event)" class="red cross glyphicon glyphicon-remove"></i>
         <i ui-sref="detailAuction({idAuction:{{item.ID}}})" class="link glyphicon glyphicon-share"></i>
     </h2>
     <div class="auction-detail-item col-xs-12 col-sm-12 col-md-6 col-lg-6 no-padding-detail">
