--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 		<script src="/app/components/Account/Registration/registrationController.js"></script>
 		<script src="/app/components/Account/Profile/userProfileController.js"></script>
 		<script src="/app/components/Account/ForgotPassword/forgotPasswordController.js"></script>
+		<script src="/app/components/Account/Notification/notificationController.js"></script>
 		<script src="/app/components/Auction/Create/createAuctionController.js"></script>
 		<script src="/app/components/Auction/List/auctionListController.js"></script>
 		<script src="/app/components/Auction/CreatedAuction/createdAuctionController.js"></script>
