- WIP notification page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<script src="/node_modules/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
 		<script src="/node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
 		<script src="/node_modules/bootstrap-datepicker/dist/locales/bootstrap-datepicker.cs.min.js"></script>
+		<script src="/node_modules/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
 		<script src="/node_modules/angular/angular.min.js"></script>
 		<script src="/bower_components/angular-timer/dist/angular-timer.min.js"></script>
 		<script src="/bower_components/humanize-duration/humanize-duration.js"></script>
@@ -96,6 +97,7 @@
         <link rel="stylesheet" href="/node_modules/ng-dialog/css/ngDialog-theme-default.min.css" />
         <link rel="stylesheet" href="/node_modules/lightbox2/dist/css/lightbox.css" />
 		<link rel="stylesheet" href="/node_modules/jq-accordion/dist/css/jquery.accordion.css" />
+		<link rel="stylesheet" href="/node_modules/bootstrap-toggle/css/bootstrap-toggle.min.css" />
 		<!-- My Styles -->
 		<link rel="stylesheet" href="css/form.css" />
 		<link rel="stylesheet" href="css/loader.css" />
