--- a/app/shared/directives/DetailAuction/detailAuctionDirective.html
+++ b/app/shared/directives/DetailAuction/detailAuctionDirective.html
@@ -51,7 +51,7 @@
         <div class="col-xs-12 col-sm-6 col-md-12 col-lg-12 no-padding-detail">
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="detail-label col-xs-6 col-sm-6 col-md-7 col-lg-6">
-                    <span class="normal-icon glyphicon glyphicon-pencil"></span>
+                    <i class="normal-icon awes-icon far fa-building"></i>
                     <span>{{'texts.auction.owner_company_name' | i18next}}:</span>
                 </div>
                 <div class="detail-content col-xs-6 col-sm-6 col-md-5 col-lg-6"><span>{{item.owner_company_name}}</span></div>
