--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 		<script src="/app/components/Account/Activate/activateController.js"></script>
 		<script src="/app/components/Account/Login/loginController.js"></script>
 		<script src="/app/components/Account/Registration/registrationController.js"></script>
-		<script src="/app/components/Account/Profile/userProfileController.js"></script>
+		<script src="/app/components/Account/Profile/MyAccount/userProfileController.js"></script>
+		<script src="/app/components/Account/Profile/ChangePassword/changePasswordController.js"></script>
+		<script src="/app/components/Account/Profile/Notification/notificationController.js"></script>
 		<script src="/app/components/Account/ForgotPassword/forgotPasswordController.js"></script>
-		<script src="/app/components/Account/Notification/notificationController.js"></script>
 		<script src="/app/components/Auction/Create/createAuctionController.js"></script>
 		<script src="/app/components/Auction/List/auctionListController.js"></script>
 		<script src="/app/components/Auction/CreatedAuction/createdAuctionController.js"></script>
@@ -129,7 +130,7 @@
 					</div>
 				</div>
 				<div ng-if="isLoggedUser()" class="header-right col-xs-12 col-sm-12 col-md-8 col-lg-6">
-					<div class="user col-xs-12 col-sm-9 col-md-9 col-lg-9" ui-sref="my_profile"><span class="glyphicon glyphicon-user"></span><span>{{usernameMain}}</span></div>
+					<div class="user col-xs-12 col-sm-9 col-md-9 col-lg-9" ui-sref="account"><span class="glyphicon glyphicon-user"></span><span>{{usernameMain}}</span></div>
 					<div class="logout col-xs-12 col-sm-3 col-md-3 col-lg-3" ng-click="logout()"><span class="glyphicon glyphicon-off"></span>{{'texts.logout' | i18next}}</div>
 				</div>
 			</div>
