--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <script src="/node_modules/ng-dialog/js/ngDialog.min.js"></script>
 		<script src="/node_modules/lightbox2/dist/js/lightbox.min.js"></script>
 		<script src="/node_modules/angular-sanitize/angular-sanitize.min.js"></script>
+		<script src="/node_modules/chart.js/dist/Chart.min.js"></script>
 		<script type="text/javascript" src="/js/i18next-1.10.1.min.js"></script>
 		<script src="/js/ng-i18next.js"></script>
 
