--- a/app/shared/directives/DetailAuction/detailAuctionDirective.html
+++ b/app/shared/directives/DetailAuction/detailAuctionDirective.html
@@ -65,22 +65,11 @@
             </div>
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="detail-label col-xs-6 col-sm-6 col-md-7 col-lg-6">
-                    <span class="normal-icon glyphicon glyphicon-tag"></span>
-                    <span>{{'texts.auction.freight_type.label' | i18next}}:</span>
-                </div>
-                <div class="detail-content col-xs-6 col-sm-6 col-md-5 col-lg-6">
-                    <span>{{getFreightType(item.freight.freight_type)}}</span>
-                    <span ng-show="item.quantity > 1" class="note">x{{item.quantity}}</span>
-                </div>
-            </div>
-            <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="detail-label col-xs-6 col-sm-6 col-md-7 col-lg-6">
                     <i class="normal-icon awes-icon fas fa-weight-hanging"></i>
                     <span>{{'texts.auction.freight_weight' | i18next}}:</span>
                 </div>
                 <div class="detail-content col-xs-6 col-sm-6 col-md-5 col-lg-6">
-                    <span>{{item.freight.freight_weight}} kg</span>
-                    <span ng-show="item.quantity > 1" class="note">x{{item.quantity}}</span>
+                    <span>{{item.freight.freight_weight}}&nbsp;kg</span>
                 </div>
             </div>
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -90,7 +79,15 @@
                 </div>
                 <div class="detail-content col-xs-6 col-sm-6 col-md-5 col-lg-6">
                     <span>{{item.freight.freight_size}}</span>
-                    <span ng-show="item.quantity > 1" class="note">x{{item.quantity}}</span>
+                </div>
+            </div>
+            <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="detail-label col-xs-6 col-sm-6 col-md-7 col-lg-6">
+                    <span class="normal-icon awes-icon fas fa-boxes"></span>
+                    <span>{{'texts.auction.freight_quantity' | i18next}}:</span>
+                </div>
+                <div class="detail-content col-xs-6 col-sm-6 col-md-5 col-lg-6">
+                    <span>{{item.quantity}}</span>
                 </div>
             </div>
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
