--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 		<script src="/app/components/Account/Profile/MyAccount/userProfileController.js"></script>
 		<script src="/app/components/Account/Profile/ChangePassword/changePasswordController.js"></script>
 		<script src="/app/components/Account/Profile/Notification/notificationController.js"></script>
+		<script src="/app/components/Account/Profile/Finances/financesController.js"></script>
 		<script src="/app/components/Account/ForgotPassword/forgotPasswordController.js"></script>
 		<script src="/app/components/Auction/Create/createAuctionController.js"></script>
 		<script src="/app/components/Auction/List/auctionListController.js"></script>
