--- a/app/shared/directives/DetailShipment/detailShipmentDirective.html
+++ b/app/shared/directives/DetailShipment/detailShipmentDirective.html
@@ -12,7 +12,9 @@
 </div>
 <div class="auction-detail popover bottom col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <div class="arrow"></div>
-    <h2 class="main-header">{{'texts.shipment.detail' | i18next}} - {{item.ID}} <i ng-click="toggleDetail($event)" class=" red cross glyphicon glyphicon-remove"></i></h2>
+    <h2 class="main-header">{{'texts.shipment.detail' | i18next}} - {{item.ID}}
+        <i ng-click="toggleDetail($event)" tooltip="{{'texts.shipment.tooltips.close_detail' | i18next}}" class="red cross glyphicon glyphicon-remove"></i>
+    </h2>
     <div class="auction-detail-item col-xs-12 col-sm-6 col-md-6 col-lg-6 no-padding-detail">
         <div class="detail-row address">
             <span class="glyphicon glyphicon-home"></span>
