--- a/app/shared/directives/DetailUser/detailUserDirective.html
+++ b/app/shared/directives/DetailUser/detailUserDirective.html
@@ -18,7 +18,7 @@
 <div class="auction-detail popover bottom col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <div class="arrow"></div>
     <h2 class="main-header">{{'texts.user.detail' | i18next}}
-        <i ng-click="toggleDetail($event)" tooltip="{{'texts.user.tooltips.close_detail' | i18next}}" class="red cross glyphicon glyphicon-remove"></i>
+        <i ng-click="toggleDetail($event)" title="{{'texts.user.tooltips.close_detail' | i18next}}" class="red cross glyphicon glyphicon-remove"></i>
     </h2>
     <div class="auction-detail-item col-xs-12 col-sm-12 col-md-6 col-lg-6">
         <div class="detail-row">
