--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		<script src="/node_modules/lightbox2/dist/js/lightbox.min.js"></script>
 		<script src="/node_modules/angular-sanitize/angular-sanitize.min.js"></script>
 		<script src="/node_modules/chart.js/dist/Chart.min.js"></script>
+		<script src="/node_modules/angularjs-tooltips/dist/angular-tooltips.min.js"></script>
 		<script type="text/javascript" src="/js/i18next-1.10.1.min.js"></script>
 		<script src="/js/ng-i18next.js"></script>
 
@@ -101,6 +102,7 @@
         <link rel="stylesheet" href="/node_modules/lightbox2/dist/css/lightbox.css" />
 		<link rel="stylesheet" href="/node_modules/jq-accordion/dist/css/jquery.accordion.css" />
 		<link rel="stylesheet" href="/node_modules/bootstrap-toggle/css/bootstrap-toggle.min.css" />
+		<link rel="stylesheet" href="/node_modules/angularjs-tooltips/dist/angular-tooltips.min.css" />
 		<!-- My Styles -->
 		<link rel="stylesheet" href="css/form.css" />
 		<link rel="stylesheet" href="css/loader.css" />
