- searching in auction list Item: 22

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<script src="/node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
 		<script src="/node_modules/bootstrap-datepicker/dist/locales/bootstrap-datepicker.cs.min.js"></script>
 		<script src="/node_modules/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
+		<script src="/node_modules/bootstrap-slider/dist/bootstrap-slider.min.js"></script>
 		<script src="/node_modules/angular/angular.min.js"></script>
 		<script src="/bower_components/angular-timer/dist/angular-timer.min.js"></script>
 		<script src="/bower_components/humanize-duration/humanize-duration.js"></script>
@@ -102,6 +103,7 @@
         <link rel="stylesheet" href="/node_modules/lightbox2/dist/css/lightbox.css" />
 		<link rel="stylesheet" href="/node_modules/jq-accordion/dist/css/jquery.accordion.css" />
 		<link rel="stylesheet" href="/node_modules/bootstrap-toggle/css/bootstrap-toggle.min.css" />
+		<link rel="stylesheet" href="/node_modules/bootstrap-slider/dist/css/bootstrap-slider.min.css" />
 		<link rel="stylesheet" href="/node_modules/angularjs-tooltips/dist/angular-tooltips.min.css" />
 		<!-- My Styles -->
 		<link rel="stylesheet" href="css/form.css" />
