--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry&key=AIzaSyDv7qv63UymYWbSAL1m8ZRgYOj9yyrifxE"></script>
 
 		<!-- Styles -->
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-		<link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css" />
+		<link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css" />
+		<link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="/node_modules/bootstrap-social/bootstrap-social.css" />
-		<link rel="stylesheet" href="/node_modules/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css" />
+		<link rel="stylesheet" href="/node_modules/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
 		<link rel="stylesheet" href="/node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css" />
         <link rel="stylesheet" href="/node_modules/ng-dialog/css/ngDialog.min.css" />
         <link rel="stylesheet" href="/node_modules/ng-dialog/css/ngDialog-theme-default.min.css" />
-        <link rel="stylesheet" href="/node_modules/lightbox2/dist/css/lightbox.css" />
+        <link rel="stylesheet" href="/node_modules/lightbox2/dist/css/lightbox.min.css" />
 		<link rel="stylesheet" href="/node_modules/jq-accordion/dist/css/jquery.accordion.css" />
 		<link rel="stylesheet" href="/node_modules/bootstrap-toggle/css/bootstrap-toggle.min.css" />
 		<link rel="stylesheet" href="/node_modules/bootstrap-slider/dist/css/bootstrap-slider.min.css" />
