minimální cástka na položku je 1kč

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 		<footer>
 			<div class="footer-content">
 				<div class="company-contact">
-					<h3>Nohe s.r.o.</h3>
+					<h3>Nohe</h3>
 					<ul>
 						<li><span class="glyphicon glyphicon-earphone"></span><span>+420 732 601 095</span></li>
 						<li><span class="glyphicon glyphicon-envelope"></span><span>info@nohe.cz</span></li>
