--- a/app/shared/directives/Menu/menuDirective.html
+++ b/app/shared/directives/Menu/menuDirective.html
@@ -54,6 +54,9 @@
         <div class="tab" ui-sref="map" ng-class="underRoute == 'map' ? 'active' : null">
             {{'texts.tab.map' | i18next}}
         </div>
+        <div class="tab" ui-sref="usersActivities" ng-class="underRoute == 'activities' ? 'active' : null">
+            {{'texts.tab.activities' | i18next}}
+        </div>
     </div>
 </span>
 <div class="col-md-10 tab-content" ng-transclude></div>
