--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 		<script src="/app/components/Auction/Detail/detailAuctionController.js"></script>
 		<script src="/app/components/Admin/Users/usersController.js"></script>
 		<script src="/app/components/Admin/Map/mapController.js"></script>
+		<script src="/app/components/Admin/UsersActivities/usersActivitiesController.js"></script>
 
 		<!-- Directives -->
 		<script src="/app/shared/directives/DetailAuction/detailAuctionDirective.js"></script>
