upgrade gulp, condition and terms in footer

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 					<ul>
 						<li><span class="glyphicon glyphicon-earphone"></span><span>+420 732 601 095</span></li>
 						<li><span class="glyphicon glyphicon-envelope"></span><span>info@nohe.cz</span></li>
+						<li><span class="glyphicon glyphicon-book"></span><span><a href="https://nohe.cz/Conditions/TermsAndConditions.pdf" target="_blank">{{'texts.conditions' | i18next}}</a></span></li>
 					</ul>
 				</div>
 			</div>
