--- a/app/shared/directives/Menu/menuDirective.html
+++ b/app/shared/directives/Menu/menuDirective.html
@@ -6,6 +6,9 @@
         <div class="tab" ui-sref="account" ng-class="aboveRoute == 'account' ? 'active' : null">
             {{'texts.tab.account' | i18next}}
         </div>
+        <div ng-show="user.hasNotPaidInvoice" class="tab warning" ui-sref="invoices" ng-class="aboveRoute == 'invoices' ? 'active' : null">
+            <span class="glyphicon glyphicon-exclamation-sign icon"></span><span>{{'texts.invoices.warning_message' | i18next}}</span>
+        </div>
     </div>
     <div class="menu-vertical col-md-2" ng-if="aboveRoute == 'auction'">
         <div class="tab" ui-sref="auction" ng-class="underRoute == 'list' ? 'active' : null">
