--- a/index.html
+++ b/index.html
@@ -45,45 +45,45 @@
 		<script type="text/javascript" src="/js/map.js"></script>
 
 		<!-- Main File -->
-		<script src="/app/app.js"></script>
+		<script src="/app/app.js?v=01?v=01"></script>
 
 		<!-- Services -->
-		<script src="/app/shared/Services/AuctionService.js"></script>
-		<script src="/app/shared/Services/UserService.js"></script>
-		<script src="/app/shared/Services/UserAbilityService.js"></script>
-		<script src="/app/shared/Services/AdminService.js"></script>
+		<script src="/app/shared/Services/AuctionService.js?v=01"></script>
+		<script src="/app/shared/Services/UserService.js?v=01"></script>
+		<script src="/app/shared/Services/UserAbilityService.js?v=01"></script>
+		<script src="/app/shared/Services/AdminService.js?v=01"></script>
 
 		<!-- Controllers -->
-		<script src="/app/shared/mainController.js"></script>
-		<script src="/app/components/Account/Activate/activateController.js"></script>
-		<script src="/app/components/Account/Login/loginController.js"></script>
-		<script src="/app/components/Account/Registration/registrationController.js"></script>
-		<script src="/app/components/Account/Profile/MyAccount/userProfileController.js"></script>
-		<script src="/app/components/Account/Profile/ChangePassword/changePasswordController.js"></script>
-		<script src="/app/components/Account/Profile/Notification/notificationController.js"></script>
-		<script src="/app/components/Account/Profile/Finances/financesController.js"></script>
-		<script src="/app/components/Account/Profile/Invoices/invoicesController.js"></script>
-		<script src="/app/components/Account/ForgotPassword/forgotPasswordController.js"></script>
-		<script src="/app/components/Auction/Create/createAuctionController.js"></script>
-		<script src="/app/components/Auction/List/auctionListController.js"></script>
-		<script src="/app/components/Auction/CreatedAuction/createdAuctionController.js"></script>
-		<script src="/app/components/Auction/FavouriteAuction/favouriteAuctionController.js"></script>
-		<script src="/app/components/Auction/WinAuction/winAuctionController.js"></script>
-		<script src="/app/components/Auction/BidsAuction/bidsAuctionController.js"></script>
-		<script src="/app/components/Auction/Expired/expiredAuctionController.js"></script>
-		<script src="/app/components/Auction/Detail/detailAuctionController.js"></script>
-		<script src="/app/components/Admin/Users/usersController.js"></script>
-		<script src="/app/components/Admin/Map/mapController.js"></script>
-		<script src="/app/components/Admin/UsersActivities/usersActivitiesController.js"></script>
+		<script src="/app/shared/mainController.js?v=01"></script>
+		<script src="/app/components/Account/Activate/activateController.js?v=01"></script>
+		<script src="/app/components/Account/Login/loginController.js?v=01"></script>
+		<script src="/app/components/Account/Registration/registrationController.js?v=01"></script>
+		<script src="/app/components/Account/Profile/MyAccount/userProfileController.js?v=01"></script>
+		<script src="/app/components/Account/Profile/ChangePassword/changePasswordController.js?v=01"></script>
+		<script src="/app/components/Account/Profile/Notification/notificationController.js?v=01"></script>
+		<script src="/app/components/Account/Profile/Finances/financesController.js?v=01"></script>
+		<script src="/app/components/Account/Profile/Invoices/invoicesController.js?v=01"></script>
+		<script src="/app/components/Account/ForgotPassword/forgotPasswordController.js?v=01"></script>
+		<script src="/app/components/Auction/Create/createAuctionController.js?v=01"></script>
+		<script src="/app/components/Auction/List/auctionListController.js?v=01"></script>
+		<script src="/app/components/Auction/CreatedAuction/createdAuctionController.js?v=01"></script>
+		<script src="/app/components/Auction/FavouriteAuction/favouriteAuctionController.js?v=01"></script>
+		<script src="/app/components/Auction/WinAuction/winAuctionController.js?v=01"></script>
+		<script src="/app/components/Auction/BidsAuction/bidsAuctionController.js?v=01"></script>
+		<script src="/app/components/Auction/Expired/expiredAuctionController.js?v=01"></script>
+		<script src="/app/components/Auction/Detail/detailAuctionController.js?v=01"></script>
+		<script src="/app/components/Admin/Users/usersController.js?v=01"></script>
+		<script src="/app/components/Admin/Map/mapController.js?v=01"></script>
+		<script src="/app/components/Admin/UsersActivities/usersActivitiesController.js?v=01"></script>
 
 		<!-- Directives -->
-		<script src="/app/shared/directives/DetailAuction/detailAuctionDirective.js"></script>
-		<script src="/app/shared/directives/Menu/menuDirective.js"></script>
-		<script src="/app/shared/directives/egFiles.js"></script>
-		<script src="/app/shared/directives/pagingDirective.js"></script>
+		<script src="/app/shared/directives/DetailAuction/detailAuctionDirective.js?v=01"></script>
+		<script src="/app/shared/directives/Menu/menuDirective.js?v=01"></script>
+		<script src="/app/shared/directives/egFiles.js?v=01"></script>
+		<script src="/app/shared/directives/pagingDirective.js?v=01"></script>
 
 		<!-- Route File -->
-		<script src="/app/routes.js"></script>
+		<script src="/app/routes.js?v=01"></script>
 
 		<!-- Styles -->
 		<link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css" />
